set minSdkVersion for Android to API 16; set source and target compatibilities to Java 1.7;